Add mouse control to tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -11,6 +11,8 @@ setw -g mode-keys vi
 # set-option -g pane-border-fg colour235 #base02
 # set-option -g pane-active-border-fg colour240 #base01
 
+set -g mouse
+
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 bind | split-window -h
 bind - split-window -v
