Removes some flakey tmux integrations

--- a/tmux.conf
+++ b/tmux.conf
@@ -11,7 +11,7 @@ setw -g mode-keys vi
 # set-option -g pane-border-fg colour235 #base02
 # set-option -g pane-active-border-fg colour240 #base01
 
-set -g mouse
+# set -g mouse
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 bind | split-window -h
@@ -38,7 +38,7 @@ bind L resize-pane -R 5
 # set -g status-right "#[fg=blue]#S #I:#P #[fg=yellow]:: %d %b %Y #[fg=green]:: %l:%M %p :: #(date -u | awk '{print $4}')::"
 
 set-option -g status on                # turn the status bar on
-set -g status-utf8 on                  # set utf-8 for the status bar
+# set -g status-utf8 on                  # set utf-8 for the status bar
 # set -g status-interval 5               # set update frequencey (default 15 seconds)
 set -g status-justify centre           # center window list for clarity
 set-option -g status-position top    # position the status bar at top of screen
